--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -7,16 +7,17 @@
   display: flex;
   flex-direction: row;
 }
-.leftSideContainer{
-    max-width: 900px;
-    height: 35%;
-    text-align: center;
-    background-color: #83497b25;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+.leftSideContainer {
+  max-width: 900px;
+  height: 35%;
+  text-align: center;
+  background-color: #83497b25;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  overflow: "scroll";
 }
-.nothingAdded{
+.nothingAdded {
   background-color: #83497b25;
   width: 100%;
   height: 100px;
@@ -24,7 +25,7 @@
   line-height: 100px;
   text-align: center;
 }
-.header{
+.header {
   text-align: center;
   max-width: 900px;
   margin-top: 30px;
