--- a/src/components/ContactsList.module.css
+++ b/src/components/ContactsList.module.css
@@ -4,6 +4,9 @@
   margin-top: 30px;
   color: #83497b;
   width: 100%;
+  height: 390px;
+  /* background-color: aqua; */
+  overflow: "scroll";
 }
 .container li {
   list-style: none;
