--- a/src/components/ContactsList.module.css
+++ b/src/components/ContactsList.module.css
@@ -5,6 +5,7 @@
   color: #83497b;
   width: 100%;
   height: 390px;
+  position: relative;
   /* background-color: aqua; */
   overflow: "scroll";
 }
@@ -19,3 +20,10 @@
   margin-top: 5px;
   background-color: #83497b25;
 }
+/* .deleteSelectedButton{
+  position: absolute;
+  bottom: 15px;
+  left: 28%;
+  width: 400px;
+  height: 40px;
+} */
